log
Thu 09 May 2024 03:05:05 PM UTC: 
 tests:  1|8
total_score: 0/70
822ae0f
Thu 09 May 2024 03:11:00 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
d4f2b73
Thu 09 May 2024 03:21:53 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++-------
 1 file changed, 20 insertions(+), 7 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:16: error: unused variable ‘parent’ [-Werror=unused-variable]
   51 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
03bcbd6
Thu 09 May 2024 03:22:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
976c33a
Thu 09 May 2024 03:22:33 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b72b325
Thu 09 May 2024 03:25:24 PM UTC: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
c1a6c3c
Thu 09 May 2024 03:27:43 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  6|7
total_score: 5/70
a78b4af
Thu 09 May 2024 03:28:32 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c751ad3
Thu 09 May 2024 03:29:17 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4777534
Thu 09 May 2024 03:29:55 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
  117 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
caa9cbd
Thu 09 May 2024 03:30:52 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
2c5dcf8
Thu 09 May 2024 03:32:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
4da020b
Thu 09 May 2024 03:50:15 PM UTC: 
 treemap.c | 22 ++++++----------------
 1 file changed, 6 insertions(+), 16 deletions(-)
 tests:  0|0
e6c9e7c
Thu 09 May 2024 03:52:37 PM UTC: 
 treemap.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:16: error: unused variable ‘parent’ [-Werror=unused-variable]
   51 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
fc562ec
Thu 09 May 2024 03:52:46 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
aca59a5
Thu 09 May 2024 03:55:28 PM UTC: 
 treemap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|0
423a510
Thu 09 May 2024 04:00:11 PM UTC: 
 treemap.c | 29 ++---------------------------
 1 file changed, 2 insertions(+), 27 deletions(-)
 tests:  11|6
total_score: 15/70
8bbea1c
Thu 09 May 2024 04:00:52 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 15/70
1f72a0a
Thu 09 May 2024 04:02:16 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  15|4
total_score: 20/70
0178894
Thu 09 May 2024 04:09:08 PM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  20|3
total_score: 35/70
ad9bb46
Thu 09 May 2024 04:09:29 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  17|4
total_score: 25/70
1a3e9f3
